ui: unify naming style in *.module.less

--- a/ui/dashboardApp/layout/main/Sider/Banner.module.less
+++ b/ui/dashboardApp/layout/main/Sider/Banner.module.less
@@ -11,11 +11,11 @@
   flex-shrink: 0;
 }
 
-.bannerLeft {
+.banner-left {
   padding: 20px 16px 20px 24px;
 }
 
-.bannerRight {
+.banner-right {
   position: absolute;
   top: 0;
   height: 100%;
@@ -23,23 +23,23 @@
   display: flex;
 }
 
-.banner:hover .bannerRight {
+.banner:hover .banner-right {
   background: lighten(@primary-color, 5%);
 }
 
-.bannerLogo {
+.banner-logo {
   margin: 5px 0;
 }
 
-.bannerContent {
+.banner-content {
   margin-left: 15px;
 }
 
-.bannerTitle {
+.banner-title {
   font-size: 1rem;
 }
 
-.bannerVersion {
+.banner-version {
   font-size: 0.8rem;
   opacity: 0.7;
 }
