--- a/ui/dashboardApp/layout/signin/index.module.less
+++ b/ui/dashboardApp/layout/signin/index.module.less
@@ -14,14 +14,14 @@
   align-items: stretch;
 }
 
-.contantContainer {
+.content-container {
   min-width: @content-width;
   width: 38%;
   background: #fff;
   position: relative;
 }
 
-.dialogContainer {
+.dialog-container {
   height: 100%;
   display: flex;
   align-items: center;
@@ -49,13 +49,13 @@
   margin-bottom: 80px;
 }
 
-.signInButton {
+.sign-in-button {
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 0.9rem;
 }
 
-.extraLink {
+.extra-link {
   font-size: 0.8rem;
   margin: 15px 0;
   a {
@@ -72,7 +72,7 @@
   }
 }
 
-.alternativeFormLayer {
+.alternative-form-layer {
   position: absolute;
   left: 0;
   top: 0;
@@ -82,7 +82,7 @@
   z-index: 2;
 }
 
-.alternativeCloseButton {
+.alternative-close-button {
   font-size: 1rem;
   border: 0;
   background: #fff;
@@ -99,7 +99,7 @@
   }
 }
 
-.alternativeButton {
+.alternative-button {
   .btn;
   .btn-default;
 
@@ -155,12 +155,12 @@
 }
 
 .container :global {
-  .formAnimation {
+  .form-animation {
     animation: 0.2s @ease-out-circ 0.5s antZoomBigIn;
     animation-fill-mode: both;
     animation-iteration-count: 1;
   }
-  .landingAnimation {
+  .landing-animation {
     animation: 0.5s linear 0 antFadeIn;
     animation-fill-mode: both;
     animation-iteration-count: 1;
