--- a/ui/lib/apps/QueryEditor/ResultTable.module.less
+++ b/ui/lib/apps/QueryEditor/ResultTable.module.less
@@ -1,4 +1,4 @@
-.resultTable {
+.result-table {
   position: absolute;
   top: @padding-page; // FIXME: This is hacky. Can we provide a component?
   bottom: 0;
