--- a/ui/lib/apps/QueryEditor/index.module.less
+++ b/ui/lib/apps/QueryEditor/index.module.less
@@ -13,7 +13,7 @@
   }
 }
 
-.contentContainer {
+.content-container {
   flex: 1;
   min-height: 0;
 
@@ -26,15 +26,15 @@
     margin: 0 @padding-page;
   }
 
-  &.isCollapsed > :global(.gutter) {
+  &.is-collapsed > :global(.gutter) {
     display: none;
   }
 }
 
-.successText {
+.success-text {
   color: @success-color;
 }
 
-.resultTableContainer {
+.result-table-container {
   position: relative;
 }
