--- a/ui/lib/apps/Statement/pages/List/TimeRangeSelector.module.less
+++ b/ui/lib/apps/Statement/pages/List/TimeRangeSelector.module.less
@@ -1,6 +1,6 @@
 @import '~antd/es/style/themes/default.less';
 
-.dropdown_content_container {
+.dropdown-content-container {
   background-color: @select-dropdown-bg;
   padding: @padding-md;
   border-radius: @border-radius-base;
@@ -8,7 +8,7 @@
   box-shadow: @box-shadow-base;
   box-sizing: border-box;
 
-  .usual_time_ranges {
+  .usual-time-ranges {
     span {
       color: @gray-6;
     }
@@ -16,26 +16,26 @@
     margin-bottom: 16px;
   }
 
-  .custom_time_ranges {
+  .custom-time-ranges {
     span {
       color: @gray-6;
     }
   }
 
-  .time_range_items {
+  .time-range-items {
     max-width: 360px;
     margin-top: 8px;
     display: flex;
     flex-wrap: wrap;
   }
 
-  .time_range_item {
+  .time-range-item {
     width: 120px;
     padding-bottom: 4px;
     cursor: pointer;
   }
 
-  .time_range_item_active {
+  .time-range-item-active {
     color: @primary-color;
   }
 }
