--- a/ui/lib/components/AnimatedSkeleton/index.module.less
+++ b/ui/lib/components/AnimatedSkeleton/index.module.less
@@ -1,18 +1,18 @@
 @import '~antd/es/style/mixins/motion.less';
 
 .container :global {
-  .skeletonAnimationFirstTime {
+  .skeleton-animation-first-time {
     animation: 0.5s linear 0.5s antFadeIn;
     animation-fill-mode: both;
     animation-iteration-count: 1;
   }
-  .skeletonAnimationNotFirstTime {
+  .skeleton-animation-not-first-time {
     animation: 0.5s linear 0 antFadeIn;
     animation-fill-mode: both;
     animation-iteration-count: 1;
   }
 
-  .contentAnimation {
+  .content-animation {
     animation: 0.2s linear 0s antFadeIn;
     animation-fill-mode: both;
   }
