--- a/ui/lib/components/Bar/Bar.module.less
+++ b/ui/lib/components/Bar/Bar.module.less
@@ -22,7 +22,7 @@
   padding-right: 5px;
 }
 
-.bar_container {
+.bar-container {
   flex-grow: 1;
   position: relative;
   height: @bar-height;
@@ -36,7 +36,7 @@
   background-color: @bar-color;
 }
 
-.error_bar {
+.error-bar {
   position: absolute;
   top: 50%;
   height: @error-line-width;
@@ -53,13 +53,13 @@
     top: 50%;
   }
 
-  &.min_bar {
+  &.min-bar {
     &::before {
       left: 0;
     }
   }
 
-  &.max_bar {
+  &.max-bar {
     &::before {
       right: 0;
     }
