--- a/ui/lib/components/CardTable/index.module.less
+++ b/ui/lib/components/CardTable/index.module.less
@@ -1,6 +1,6 @@
-.cardTable {
+.card-table {
   :global {
-    .ms-DetailsRow {
+    .ms-details-row {
       > :first-child.ms-DetailsRow-fields {
         font-size: 0.8rem;
         > :first-child {
@@ -11,7 +11,7 @@
   }
 }
 
-.cardTable.contentExtended {
+.card-table.content-extended {
   :global {
     .ms-DetailsRow {
       > :first-child.ms-DetailsRow-fields {
@@ -23,7 +23,7 @@
   }
 }
 
-.tableHeader {
+.table-header {
   :global {
     .ms-DetailsHeader {
       padding-top: 0;
@@ -47,11 +47,11 @@
   }
 }
 
-.clickableTableRow {
+.clickable-table-row {
   cursor: pointer;
 }
 
-.cardTableContent {
+.card-table-content {
   margin-left: -@padding-page;
   margin-right: -@padding-page;
 }
