--- a/ui/lib/components/Head/index.module.less
+++ b/ui/lib/components/Head/index.module.less
@@ -1,6 +1,6 @@
 @import '~antd/es/style/themes/default.less';
 
-.headContainer {
+.head-container {
   // &:before,
   // &:after {
   //   // Handle margin collapse
@@ -9,23 +9,23 @@
   // }
 }
 
-.headInner {
+.head-inner {
   margin-top: @padding-page;
 }
 
-.headTitleSection {
+.head-title-section {
   margin: @padding-lg @padding-page;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.headBack {
+.head-back {
   margin-right: @padding-lg;
   flex-shrink: 0;
 }
 
-.headTitle {
+.head-title {
   color: @heading-color;
   font-size: @heading-4-size;
   line-height: 32px;
@@ -33,11 +33,11 @@
   margin-right: @padding-lg;
 }
 
-.headContent {
+.head-content {
   margin: @padding-lg @padding-page;
 }
 
-.headFooter {
+.head-footer {
   margin-top: @padding-lg;
   border-bottom: 1px solid @border-color-base;
   padding: 0 @padding-page;
