--- a/ui/lib/components/TextWrap/index.module.less
+++ b/ui/lib/components/TextWrap/index.module.less
@@ -1,4 +1,4 @@
-.singleLine {
+.single-line {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -12,7 +12,7 @@
   }
 }
 
-.multiLine {
+.multi-line {
   overflow-wrap: break-word;
   white-space: normal;
   text-overflow: inherit;
