--- a/ui/lib/components/Toolbar/index.module.less
+++ b/ui/lib/components/Toolbar/index.module.less
@@ -1,17 +1,17 @@
-.toolbar_container {
+.toolbar-container {
   display: flex;
 
   :global(.ant-space-item) {
     margin-bottom: 8px;
   }
 
-  .left_space {
+  .left-space {
     flex: 1;
     display: flex;
     flex-wrap: wrap;
   }
 
-  .right_space {
+  .right-space {
     align-self: flex-start;
     margin-top: 6px;
   }
