--- a/ui/lib/components/ColumnsSelector/index.module.less
+++ b/ui/lib/components/ColumnsSelector/index.module.less
@@ -1,13 +1,13 @@
 @import '~antd/es/style/themes/default.less';
 
-.title_container {
+.title-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 32px;
 }
 
-.foot_container {
+.foot-container {
   border-top: 1px solid @border-color-split;
   margin: 0 -@popover-padding-horizontal;
   padding: 8px @popover-padding-horizontal 0;
