--- a/ui/lib/components/Descriptions/index.module.less
+++ b/ui/lib/components/Descriptions/index.module.less
@@ -30,7 +30,7 @@
   // nothing for now
 }
 
-.itemSingleline {
+.item-singleline {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -44,7 +44,7 @@
   }
 }
 
-.itemMultiline {
+.item-multiline {
   overflow-wrap: break-word;
   white-space: normal;
   text-overflow: inherit;
