ui: respect external style's naming

--- a/ui/lib/components/CardTable/index.module.less
+++ b/ui/lib/components/CardTable/index.module.less
@@ -1,6 +1,6 @@
 .card-table {
   :global {
-    .ms-detailsRow {
+    .ms-DetailsRow {
       > :first-child.ms-DetailsRow-fields {
         font-size: 0.8rem;
         > :first-child {
