--- a/ui/lib/components/CardTabs/index.module.less
+++ b/ui/lib/components/CardTabs/index.module.less
@@ -3,7 +3,7 @@
   margin-right: -@padding-page;
 
   :global {
-    .ant-tabs-bar {
+    .ant-tabs-nav {
       padding-left: @padding-page;
       padding-right: @padding-page;
     }
