--- a/ui/lib/apps/ClusterInfo/pages/List.module.less
+++ b/ui/lib/apps/ClusterInfo/pages/List.module.less
@@ -1,6 +1,12 @@
 .sticky_tabs_header {
   padding-left: 48px;
-  height: 46px;
+  height: 48px;
   margin-bottom: 16px;
   border-bottom: 1px solid #f0f0f0;
+
+  :global {
+    .ant-tabs-ink-bar {
+      height: 2px;
+    }
+  }
 }
