--- a/ui/lib/apps/ClusterInfo/pages/List.module.less
+++ b/ui/lib/apps/ClusterInfo/pages/List.module.less
@@ -1,3 +1,5 @@
+@import '~antd/es/style/themes/default.less';
+
 .sticky_tabs_header {
   padding-left: @padding-page; // 48px
   height: @padding-page; // 48px
