--- a/ui/dashboardApp/layout/main/index.module.less
+++ b/ui/dashboardApp/layout/main/index.module.less
@@ -1,28 +1,14 @@
 @import '~antd/es/style/themes/default.less';
 
 .container {
-  display: flex;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
   height: 100vh;
-  width: 100vw;
 }
 
 .content {
   position: relative;
-
-  flex: 1;
-
   z-index: 3;
   background: #fff;
   min-height: 100vh;
-  box-shadow: 0 0 30px rgba(#000, 0.15);
-
-  overflow-x: hidden;
-  overflow-y: auto;
 
   &:before,
   &:after {
@@ -30,4 +16,14 @@
     content: ' ';
     display: table;
   }
+}
+
+.contentBack {
+  position: fixed;
+  z-index: 2;
+  background: #fff;
+  top: 0;
+  height: 100%;
+  right: 0;
+  box-shadow: 0 0 30px rgba(#000, 0.15);
 }
