--- a/ui/lib/apps/ClusterInfo/pages/List.module.less
+++ b/ui/lib/apps/ClusterInfo/pages/List.module.less
@@ -1,7 +1,8 @@
 @import '~antd/es/style/themes/default.less';
 
-.sticky_tabs_header {
+.card_tab_navs {
   padding-left: @padding-page; // 48px
+  padding-right: @padding-page; // 48px
   height: @padding-page; // 48px
   margin-bottom: @padding-md; // 16px
   border-bottom: 1px solid @gray-4;
