--- a/ui/lib/apps/TimelineTracing/components/Timeline.module.less
+++ b/ui/lib/apps/TimelineTracing/components/Timeline.module.less
@@ -5,3 +5,9 @@
   min-width: 240px;
   border: 1px solid @gray-5;
 }
+
+.detail_chart_container {
+  height: 500px;
+  min-width: 240px;
+  border: 1px solid @gray-5;
+}
