--- a/ui/lib/apps/TimelineTracing/components/Timeline.module.less
+++ b/ui/lib/apps/TimelineTracing/components/Timeline.module.less
@@ -10,3 +10,21 @@
   min-width: 240px;
   border: 1px solid @gray-5;
 }
+
+.span_tooltip_container {
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 4px;
+  background: #fff;
+  text-align: center;
+  font-size: 10px;
+  border: 1px solid #ddd;
+  z-index: 10;
+  pointer-events: none;
+
+  span {
+    color: cornflowerblue;
+  }
+}
